--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "jasmine"
   },
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/Muses/error.git"
+  },
   "keywords": [
     "Muses",
     "Error"
